sc8pr 2.2.dev...

*   = Change documented
**  = No documentation required
*** = Not added to documentation
****= Experimental
!!! = In progress


*** Add 'geom.smallAngle' and 'geom.shiftAlongNormal'
*** Add 'Video' methods 'splice', 'info', '__add__', 'effect', 'effectInPlace', 'play'
*** Add 'TextInputCanvas' class and call 'tk.getClipboard'
*** Add 'TextInput.blurAction'
*** Add 'Image.crop', 'Image.flip', and 'Image.cut'
*** Add 'Image.autocrop' and 'util.autocrop' (depends on pygame.surfarray -> numpy)
*** Add 'Canvas.icons, 'Canvas.iconSize'
*** Add FOCUS event and 'Graphic.focus' method; add; 'trigger' argument to 'Graphic.blur'
*** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
*** Create 'util.circle_intersect'
*** Add 'scrollable' property and 'iconofy'/'deiconify' methods to 'Graphic' class
*** Add 'sc8pr.gui.scroll' and 'sc8pr.gui.tk' modules
*** Add 'robot.gyroSample' and 'robot.gyroChange' in 'sc8pr.robot.arena'
*** 'WebCache' does not overwrite existing cache file if URL is different
*** Add 'LATEX_URL', 'LATEX_FMT', 'latex_url' to 'sc8pr.misc.webcache'
*** Add 'QCircle' and make 'Circle' faster drawing


** Fix minor bug with 'Sketch.caption' getter
** Fix divide-by-zero in 'shape.Line' when length is 0
** Fix bug in 'Canvas.__init__'
** Fix blit location bug in 'Canvas.snapshot'
** Drag slider knob from any point rather than only the center
** Default knob size based on number of steps
** Allow clipboard paste into text input
** Add support for selection, copy, cut, and paste operations in 'TextInput'
** Add 'sc8pr.examples.vector2d'
* Add 'Canvas.clipArea', 'Canvas.resizeContent'
* Allow 'Canvas.__isub__' to accept a string; add 'Canvas.removeItems'
* 'Video.__getitem__' accepts slices and calls 'Video.clip'
* 'Video.clip' accepts negative 'start' and 'end' arguments
* Add 'Slider.methodNames'
* 'Plot.clockwise' and 'Plot.units' properties
* 'Plot' constructor can take an object with 'size' attribute in place of a size literal